--- a/web_app/tournaments/templates/tours_base.html
+++ b/web_app/tournaments/templates/tours_base.html
@@ -39,5 +39,7 @@
     <h4 class="footer-head">Контакты.</h4>
     <h4 class="footer-head">Копирайт.</h4>
   </footer>
+  {% block modals %}
+  {% endblock %}
   </body>
 </html>
