--- a/web_app/static/css/login_style.css
+++ b/web_app/static/css/login_style.css
@@ -1,6 +1,7 @@
 @import "root.css";
 @import "fonts.css";
 @import "buttons.css";
+@import "forms.css";
 
 html,body{
   width: 100%;
@@ -10,14 +11,14 @@ html,body{
 
 @media (min-aspect-ratio: 16/9 ) {
   body {
-    background: #ffffff url("img/LoginBack.jpg") no-repeat;
+    background: #ffffff url("../img/LoginBack.jpg") no-repeat;
     background-size: 100%;
   }
 }
 
 @media (max-aspect-ratio: 16/9) {
   body {
-    background: #ffffff url("img/LoginBack.jpg") no-repeat;
+    background: #ffffff url("../img/LoginBack.jpg") no-repeat;
     background-size: auto 100%;
   }
 }
@@ -31,20 +32,6 @@ html,body{
   margin-top: 0;
   border-radius: 0 0 0 15px;
   background-color: var(--deep-dark_40);
-}
-
-.form{
-/*
-  min-height: 385px;
-  height: calc(max(42vw / 537, 1px) * 385);*/
-  min-width: 537px;
-  width: 42vw;
-  border: 2px solid var(--deep-dark);
-  border-radius: 16px;
-  margin-left: 13%;
-  background-color: var(--darkly_80);
-  display: grid;
-  justify-content: center;
 }
 
 .main-container{
@@ -171,43 +158,7 @@ a:hover{
   display: grid;
   margin: 0;
 }
-/*
-.button{
-  background-color: var(--dark);
-  border-radius: 10px;
-  border: none;
-  font-family: var(--button-font-family);
-  font-size: max(1.875vw, 24px);
-  color: #85868a;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: inset -6px -8px 19px var(--black_25),
-              inset -7px -7px 25px var(--black_25),
-              inset -5px -3px 25px var(--black_25),
-              3px 3px 10px var(--deep-dark_40);
-}
 
-.button-yes{
-  background-color: #5c7729;
-}
-
-.button-yes:hover{
-  background-color: #a7f017;
-
-}
-
-.button-no{
-  background-color: #723b3d;
-}
-
-.button-no:hover{
-  background-color: #c7575a;
-}
-
-.button:hover{
-  color: var(--light);
-}
-*/
 ::placeholder{
   color: #91919c;
 }
