--- a/web_app/static/css/tourn_style.css
+++ b/web_app/static/css/tourn_style.css
@@ -7,6 +7,7 @@
 @import "footer.css";
 @import "hidden.css";
 @import "right_nav.css";
+@import "modal.css";
 
 body{
   background: #ffffff url("../img/snow200x200.jpg");
