--- a/web_app/login/templates/login/login.html
+++ b/web_app/login/templates/login/login.html
@@ -14,7 +14,7 @@
       </header>
       <form class="form login-form" method="post">
         {{ form.hidden_tag() }}
-        <div class="fields_2">
+        <div class="rows_2">
           <figure class="field">
             <figcaption class="field-caption">
               Пользователь
