--- a/web_app/login/templates/login/register.html
+++ b/web_app/login/templates/login/register.html
@@ -14,7 +14,7 @@
       </header>
       <form class="form register-form" method="post">
         {{ form.hidden_tag() }}
-        <div class="fields_4">
+        <div class="rows_4">
           <figure class="field">
             <figcaption class="field-caption">
               Пользователь
