--- a/web_app/static/css/root.css
+++ b/web_app/static/css/root.css
@@ -6,6 +6,7 @@
   --deep_74: rgba(0,145,234,0.74);
   --darkly: #3175b8;
   --darkly_80:  rgba(49,117,184,0.80);
+  --darkly_90:  rgba(49,117,184,0.90);
   --dark: #01579b;
   --deep-dark: #0c3759;
   --deep-dark_20: rgba(12,55,89,0.2);
@@ -16,6 +17,7 @@
   --black_50: rgba(0,0,0,0.50);
   --snow: #dde2ee;
   --snow_90: rgba(221,226,238,0.9);
+  --snow_80: rgba(221,226,238,0.8);
   --snow_72: rgba(221,226,238,0.72);
   --snow_60: rgba(221,226,238,0.6);
   --snow_50: rgba(221,226,238,0.5);
