--- a/web_app/static/css/tourn_style.css
+++ b/web_app/static/css/tourn_style.css
@@ -33,9 +33,10 @@ body{
   vertical-align: center;
 }
 
-.button-yes{
+.button-add{
   height: 52px;
   width: 52px;
+  font-size: 44px;
 }
 
 .row-grid{
