--- a/web_app/tournaments/templates/tours_add.html
+++ b/web_app/tournaments/templates/tours_add.html
@@ -1,5 +1,5 @@
 <div class="modal-container modal-container-close">
-  <form class="modal" id="tour_add_form">
+  <form class="modal add_tour_form" id="tour_add_form">
     <button class="button button-no modal-close-button">
       <span class="visually-hidden">Закрыть</span>
     </button>
