--- a/web_app/static/css/modal.css
+++ b/web_app/static/css/modal.css
@@ -15,13 +15,10 @@
 
 .modal {
   padding-top: 15px;
-  width: 537px;
-  height: 482px;
   border: 2px solid var(--deep-dark);
   border-radius: 16px;
   background-color: var(--darkly_80);
   display: grid;
-  grid-template-rows: 52px calc(3 * (83px + 26px)) calc(52px + 26px);
   justify-content: center;
   position: relative;
   margin: auto;
@@ -47,9 +44,21 @@
 }
 
 .modal-field{
+  grid-template-rows: 33px 50px;
   padding: 26px 0 0;
   width: 411px;
   height: 83px;
+}
+
+.field_address{
+  grid-template-rows: 33px 102px;
+  padding: 26px 0 0;
+  width: 411px;
+  height: 135px;
+}
+
+.area-address{
+  font-size: 18px;
 }
 
 .modal_field_12{
@@ -63,6 +72,10 @@
 
 .modal_field-input{
   font-size: 24px;
+}
+
+.modal_field-area{
+  font-size: 16px;
 }
 
 .columns_2{
@@ -117,6 +130,23 @@
   background-color: white;
 }
 
+.add_place_form{
+  width: 537px;
+  height: 534px;
+  grid-template-rows:
+          52px
+          calc(83px + 26px)
+          calc(83px + 26px + 52px)
+          calc(83px + 26px)
+          calc(52px + 26px);
+}
+
+.add_tour_form{
+  width: 537px;
+  height: 482px;
+  grid-template-rows: 52px calc(3 * (83px + 26px)) calc(52px + 26px);
+}
+
 .popup-select_places{
   position: absolute;
   top: 287px;
@@ -158,6 +188,11 @@
 .popup-select_places a:hover{
   color: var(--hover);
   text-decoration: underline;
+}
+
+.map_canvas{
+  height: 400px;
+  width: 600px;
 }
 
 /*.popup_row-button{
