--- a/web_app/static/css/root.css
+++ b/web_app/static/css/root.css
@@ -22,6 +22,7 @@
   --snow_60: rgba(221,226,238,0.6);
   --snow_50: rgba(221,226,238,0.5);
   --snow_30: rgba(221,226,238,0.3);
+  --empty: #dddddd;
   --link: #ff6e40;
   --hover: #ff3d00;
   --button-font-family: Arimo, Tahoma, sans-serif;
