--- a/web_app/tournaments/templates/place.html
+++ b/web_app/tournaments/templates/place.html
@@ -45,6 +45,9 @@
     </div>
     <section class="place-row place-map" id="map-canvas">
     </section>
+    <form enctype="multipart/form-data">
+      <input type="file">
+    </form>
   </div>
 {% endblock %}
 {% block script %}
