--- a/web_app/static/css/root.css
+++ b/web_app/static/css/root.css
@@ -29,5 +29,6 @@
   --header-font-family: Oswald, Impact, sans-serif;
   --p-font-family: FiraSans, Arial, sans-serif;
   --section-margin: 15px;
+  --width: 960px;
 }
 
