--- a/web_app/tournaments/templates/place.html
+++ b/web_app/tournaments/templates/place.html
@@ -52,7 +52,7 @@
     </section>
     {% if new or edit %}
       <form enctype="multipart/form-data" style="display: none">
-        <input type="file" id="input_file">
+        <input type="file" id="input_file" name="file">
       </form>
     {% endif %}
   </div>
