--- a/web_app/static/css/root.css
+++ b/web_app/static/css/root.css
@@ -2,6 +2,7 @@
   --light: #effbff;
   --light_50: rgba(239,251,255,0.50);
   --light_70: rgba(239,251,255,0.70);
+  --light_0: rgba(239,251,255,0);
   --deep: #0091ea;
   --deep_74: rgba(0,145,234,0.74);
   --darkly: #3175b8;
